# symbiosis

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mise.toml  pyrightconfig.json  ruff.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: code-quality.md  code-style.md  development-constraints.md  discussions.md  documentation-principles.md  git-workflow.md  testing.md  versioning.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/hooks/: hooks.json
.github/instructions/: documentation.instructions.md  plugin.instructions.md  python.instructions.md  testing.instructions.md
.monitoring/: docker-compose.yml  start.sh  stop.sh
agents/: component-generator.md  memory-analyzer.md  pattern-curator.md  pattern-learner.md
commands/: create-agent.md  memory.md  note.md  notes.md  promote-to-agent.md  promote-to-skill.md  promote.md  workflow-save.md  workflows.md
hooks/: post-edit-format.sh  session-end.sh  session-start.sh  session_start.py
plugins/as-you/skills/mcp-builder-rust/examples/client_demo/: Cargo.toml
plugins/as-you/skills/mcp-builder-rust/examples/client_demo/src/: prompt_consumer.rs  resource_reader.rs  tool_client.rs
plugins/as-you/skills/mcp-builder-rust/examples/macros_demo_server/: Cargo.toml
plugins/as-you/skills/mcp-builder-rust/examples/macros_demo_server/src/: main.rs
plugins/as-you/skills/mcp-builder-rust/examples/progress_server/: Cargo.toml
plugins/as-you/skills/mcp-builder-rust/examples/progress_server/src/: main.rs
scripts/: archive-note.sh  calculate-composite-score.sh  calculate-pmi.sh  calculate-tfidf.sh  calculate-time-decay.sh  cleanup-archive.sh  detect-cooccurrence.sh  detect-patterns.sh  detect-similar-patterns.sh  extract-contexts.sh  init-usage-stats.sh  levenshtein.sh  mark-promoted.sh  merge-similar-patterns.sh  score_calculator.py  suggest-promotions.sh  tfidf_calculator.py  track-frequency.sh
tests/: README.md  run-tests.sh  run_doctests.py  test_with_me_performance.py  validate_plugins.py
(+218 files in other folders)
