[package]
name = "mcp-client-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tool_client"
path = "src/tool_client.rs"

[[bin]]
name = "resource_reader"
path = "src/resource_reader.rs"

[[bin]]
name = "prompt_consumer"
path = "src/prompt_consumer.rs"

[dependencies]
# MCP SDK with client features
rmcp = { version = "0.11", features = ["client"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
