[package]
name = "macros-demo-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# MCP SDK
rmcp = { version = "0.11", features = ["server"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JSON Schema generation
schemars = { version = "1.0", features = ["preserve_order"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "macros-demo-mcp-server"
path = "src/main.rs"
